# ai-dial-interceptors-sdk

./: .env.example  .gitignore  .gitlab-ci.yml  .ort.yml  Dockerfile  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml
.github/workflows/: pr.yml  release.yml
aidial_interceptors_sdk/: dial_client.py  error.py
aidial_interceptors_sdk/chat_completion/: __init__.py  adapter.py  annotated_chunk.py  base.py  element_path.py  helpers.py  index_mapper.py  request_handler.py  request_message_handler.py  response_handler.py  response_message_handler.py
aidial_interceptors_sdk/embeddings/: __init__.py  adapter.py  base.py
aidial_interceptors_sdk/examples/: app.py  registry.py
aidial_interceptors_sdk/examples/chat_completion/: __init__.py  blacklisted_words.py  reject_external_links.py
aidial_interceptors_sdk/examples/chat_completion/pii_anonymiser/: __init__.py  impl.py  spacy_anonymizer.py
aidial_interceptors_sdk/examples/embeddings/: __init__.py  blacklisted_words.py  normalize_vector.py  project_vector.py
aidial_interceptors_sdk/examples/interceptor/: registry.py
aidial_interceptors_sdk/examples/interceptor/chat_completion/: __init__.py  blacklisted_words.py  cache.py  image_watermark.py  reject_external_links.py  replicator.py  statistics_reporter.py
aidial_interceptors_sdk/examples/interceptor/embeddings/: __init__.py
aidial_interceptors_sdk/examples/utils/: dict.py  path.py  watermark.py
aidial_interceptors_sdk/utils/: _debug.py  _env.py  _exceptions.py  _reflection.py  dial_sdk.py  dict.py  env.py  exceptions.py  not_given.py  reflection.py  storage.py  streaming.py
examples/: app.py
examples/interceptor/: registry.py
examples/interceptor/chat_completion/: __init__.py  cache.py  image_watermark.py  pirate.py  statistics_reporter.py
examples/interceptor/embeddings/: __init__.py  blacklisted_words.py  normalize_vector.py  project_vector.py
examples/utils/: log_config.py  lru_cache.py  markdown.py  path.py  watermark.py
helm/: development.yaml  review.yaml
scripts/: codegen.py  gen_watermark.py
tests/: conftest.py  test_dict.py  test_embedding_encoding.py  test_markdown.py  test_response_handler.py  test_spacy_anonymizer.py
(+8 files in other folders)
